--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -153,6 +153,95 @@
 			}
 		}
 	}
+	/*******************
+	TUTOR PROFILE PAGE
+	*******************/
+	.tutor_profile_header {
+		.container {
+			.tutor-profile-view {
+				.tutor-profile-card {
+					@include flex(stretch, space-between, wrap, row);
+					.tutor-img {
+						width: 20%;
+						// border: 1px solid black;
+					}
+					.tutor-content {
+						width: 80%;
+						// border: 1px solid yellowgreen;
+						padding: 30px 20px 30px 20px;
+						@include flex(stretch, space-between, wrap, row);
+
+						.my_profile {
+							font-size: 0.95rem;
+						}
+						.tutor-card-headline {
+							// width: 270px;
+							// min-width: 220px;
+							// border: 1px solid black;
+							width: 26%;
+							position: relative;
+							padding-right: 15px;
+
+							h3 {
+								font-size: 2.1rem;
+								font-weight: 400;
+							}
+						}
+						.tutor-card-description {
+							position: relative;
+							width: 70%;
+
+							// border: 1px solid black;
+							@include flex(center, flex-start, wrap, row);
+							padding-left: 20px;
+							div {
+								@include flex(center, flex-start, wrap, row);
+								margin-right: 50px;
+								margin-bottom: 20px;
+								p {
+									font-size: 0.9rem;
+								}
+								img {
+									margin-left: 15px;
+									width: 15px;
+									height: 15px;
+								}
+							}
+						}
+					}
+				}
+				.tutor-profile-nav {
+					padding: 15px 40px;
+					ul {
+						width: 100%;
+						li {
+							width: 14.28%;
+							a {
+								font-size: 0.9rem;
+							}
+						}
+						&:first-child {
+							margin-bottom: 15px;
+						}
+					}
+				}
+			}
+		}
+	}
+
+	.certificate {
+		.container {
+			.wrapper {
+				width: 90%;
+
+				div {
+					label {
+						margin-bottom: 20px;
+					}
+				}
+			}
+		}
+	}
 }
 
 @media (max-width: $breakPoint_3) {
@@ -525,6 +614,71 @@
 			}
 		}
 	}
+
+	.tutor_profile_header {
+		height: 50vh;
+		.container {
+			.tutor-profile-view {
+				.tutor-profile-card {
+					@include flex(stretch, space-between, wrap, row);
+					.tutor-img {
+						width: 25%;
+					}
+					.tutor-content {
+						width: 75%;
+
+						padding: 30px 10px 20px 20px;
+
+						.my_profile {
+							font-size: 0.9rem;
+						}
+						.tutor-card-headline {
+							width: 35%;
+
+							h3 {
+								font-size: 1.9rem;
+							}
+						}
+						.tutor-card-description {
+							position: relative;
+							width: 65%;
+
+							// border: 1px solid black;
+							@include flex(center, flex-start, wrap, row);
+							padding-left: 20px;
+							div {
+								@include flex(center, flex-start, wrap, row);
+								margin-right: 30px;
+								margin-bottom: 20px;
+								p {
+									font-size: 0.9rem;
+								}
+								img {
+									margin-left: 15px;
+									width: 15px;
+									height: 15px;
+								}
+							}
+						}
+					}
+				}
+				.tutor-profile-nav {
+					@include flex(center, space-between, wrap, row);
+					padding: 20px 50px;
+					ul {
+						width: 100%;
+						@include flex(flex-start, space-between, wrap, row);
+						li {
+							width: 28.5%;
+							a {
+								color: $white;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 @media (max-width: $breakPoint_5) {
@@ -696,6 +850,173 @@
 				.description_img {
 					width: 60%;
 					margin: 30px auto;
+				}
+			}
+		}
+	}
+
+	.tutor_profile_header {
+		padding-bottom: 50px;
+		margin-bottom: 300px;
+		background-image: url(/img/search_opt/search_opt_bg.png);
+		background-position: center;
+		background-size: cover;
+		height: 50vh;
+		position: relative;
+		.container {
+			position: absolute;
+			border-radius: 10px;
+			left: 50%;
+			transform: translateX(-50%);
+			bottom: -60%;
+			.tutor-profile-view {
+				.tutor-profile-card {
+					.tutor-img {
+						display: none;
+					}
+					.tutor-content {
+						@include flex(stretch, flex-start, wrap, row);
+						width: 100%;
+
+						padding: 25px;
+
+						.my_profile {
+							font-size: 1rem;
+							margin-bottom: -1rem;
+						}
+						.tutor-card-headline {
+							width: 100%;
+							margin-bottom: 0px;
+							margin-left: 0px;
+							text-align: left;
+							padding-right: 0;
+
+							h3 {
+								font-size: 1.8rem;
+							}
+							&::after {
+								width: 100%;
+								height: 1px;
+								display: inline-block;
+								position: absolute;
+								content: "";
+								background-color: $line_color;
+								top: unset;
+								display: none;
+								right: 0;
+							}
+							.availability {
+								margin-bottom: 10px;
+							}
+						}
+						.tutor-img-mob {
+							display: block;
+							margin-bottom: 10px;
+							position: relative;
+							img {
+								width: 150px;
+								height: auto;
+								border-radius: 10px;
+
+								display: block;
+								&:nth-child(2) {
+									position: absolute;
+									width: 25px;
+									height: 25px;
+									top: 5px;
+									right: 5px;
+									cursor: pointer;
+									transition: $transition;
+									border: 1px solid transparent;
+									&:hover {
+										transform: scale(1.1);
+										border: 1px solid $accents;
+									}
+								}
+							}
+						}
+						.tutor-card-description {
+							position: relative;
+							width: 100%;
+
+							// border: 1px solid black;
+							@include flex(center, flex-start, wrap, row);
+							padding-left: 0px;
+							div {
+								@include flex(center, flex-start, wrap, row);
+								margin-right: 15px;
+								margin-bottom: 10px;
+								p {
+									font-size: 0.9rem;
+								}
+								img {
+									margin-left: 5px;
+									width: 15px;
+									height: 15px;
+								}
+							}
+							&::before {
+								content: "";
+								display: block;
+								width: 100%;
+								height: 1px;
+								background-color: $line_color;
+								margin-bottom: 10px;
+							}
+						}
+					}
+				}
+				.tutor-profile-nav {
+					@include flex(center, space-between, wrap, row);
+					padding: 10px 50px;
+
+					position: relative;
+					.tutor-nav-toggle {
+						margin: 0 auto;
+						display: block;
+						cursor: pointer;
+						pointer-events: all;
+						span {
+							border-top: 10px solid $white;
+							border-bottom: none;
+							border-left: 10px solid transparent;
+							border-right: 10px solid transparent;
+							margin: 0 auto;
+							display: inline-block;
+						}
+					}
+					ul {
+						background-color: $accents;
+
+						max-height: 0;
+						overflow-y: hidden;
+						width: 100%;
+						transition: 0.4s all ease-in-out;
+						@include flex(flex-start, center, wrap, row);
+						position: absolute;
+						top: 80%;
+						left: 0;
+						padding: 0px 20px;
+						border-bottom-left-radius: 10px;
+						border-bottom-right-radius: 10px;
+						li {
+							width: 45%;
+							opacity: 0;
+
+							a {
+								color: $white;
+							}
+							&.show {
+								opacity: 1;
+							}
+							transition: 0.4s ease-in-out;
+						}
+						&.active-tutor-nav {
+							max-height: 300px;
+							padding: 30px 20px 20px 20px;
+							// border: 1px solid black;
+						}
+					}
 				}
 			}
 		}
@@ -952,6 +1273,112 @@
 			}
 		}
 	}
+	// tutor section
+	.tutor_section {
+		.container {
+			h3 {
+				font-size: 1.5rem;
+			}
+			.wrapper {
+				width: 100%;
+				padding: 20px;
+				button {
+					font-size: 0.9rem;
+				}
+				textarea {
+					min-width: 100%;
+				}
+			}
+		}
+	}
+	// edit my profile
+	.edit_my_profile {
+		.container {
+			form {
+				padding: 30px 30px 20px 30px;
+				@include flex(flex-start, space-between, wrap, column);
+				div {
+					margin-bottom: 20px;
+					label {
+						margin-bottom: 10px;
+					}
+					input {
+						margin-bottom: 10px;
+						margin-right: 30px;
+					}
+					a {
+						margin-left: 0px;
+						white-space: nowrap;
+					}
+				}
+
+				button {
+					align-self: flex-start;
+				}
+			}
+		}
+	}
+	// sertificate
+	.certificate {
+		.container {
+			.wrapper {
+				div {
+					width: 49%;
+					margin-bottom: 30px;
+					min-width: 200px;
+					input {
+						font-size: 0.95rem;
+						width: 98%;
+						&:focus {
+							border: 1px solid $accents;
+							border-radius: 8px;
+							outline: none;
+						}
+						&::placeholder {
+							font-size: 0.95rem;
+							color: rgba($black, 0.5);
+						}
+					}
+				}
+				.add_more {
+					width: 100%;
+
+					label {
+						width: 12.25%;
+					}
+					input {
+						width: 100%;
+					}
+				}
+			}
+		}
+	}
+	// FEATURING
+	.featuring {
+		.container {
+			.wrapper {
+				p {
+					font-size: 0.95rem;
+				}
+				button {
+					margin: 50px 0;
+					color: $accents;
+					padding: 10px 15px;
+					span {
+						color: $black;
+						font-weight: 500;
+						font-size: 0.95rem;
+					}
+				}
+				.renewal {
+					margin-top: 30px;
+					span {
+						font-weight: 600;
+					}
+				}
+			}
+		}
+	}
 }
 
 @media (max-width: $breakPoint_6_b) {
@@ -1112,6 +1539,12 @@
 					}
 				}
 			}
+		}
+	}
+
+	.tutor_profile_header {
+		.container {
+			bottom: -70%;
 		}
 	}
 }
