--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,100;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap");
 /*breakpoints*/
 * {
   padding: 0;
@@ -1273,14 +1273,14 @@ TUTOR PROFILE PAGE
   background-image: url(/img/search_opt/search_opt_bg.png);
   background-position: center;
   background-size: cover;
-  height: 40vh;
+  height: 35vh;
   position: relative; }
   .tutor_profile_header .container {
     position: absolute;
     border-radius: 10px;
     left: 50%;
     transform: translateX(-50%);
-    bottom: -55%; }
+    top: 30%; }
     .tutor_profile_header .container .tutor-profile-view {
       width: 100%;
       background-color: #b497cf;
@@ -1475,6 +1475,105 @@ TUTOR PROFILE PAGE
     padding: 10px 30px;
     border-radius: 6px; }
 
+.pricing .container .wrapper .row {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  width: 100%; }
+  .pricing .container .wrapper .row p {
+    width: 280px;
+    min-width: 150px;
+    margin-bottom: 15px; }
+  .pricing .container .wrapper .row input {
+    margin-bottom: 15px;
+    min-width: 220px;
+    padding: 7px 10px;
+    border: 1px solid rgba(90, 109, 115, 0.5);
+    border-radius: 5px; }
+.pricing .container .wrapper .recommendation {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: row; }
+  .pricing .container .wrapper .recommendation input {
+    margin-right: 20px; }
+  .pricing .container .wrapper .recommendation label {
+    width: 85%;
+    margin-bottom: 10px; }
+    .pricing .container .wrapper .recommendation label span {
+      font-weight: 500; }
+  .pricing .container .wrapper .recommendation p {
+    padding-left: 33px;
+    font-style: italic;
+    color: rgba(65, 78, 82, 0.8);
+    width: 85%; }
+.pricing .container .video_wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: row; }
+  .pricing .container .video_wrapper .video_link {
+    width: 20%; }
+  .pricing .container .video_wrapper .tutor_video {
+    position: relative;
+    width: 60%;
+    display: block; }
+    .pricing .container .video_wrapper .tutor_video .video_box {
+      display: block; }
+      .pricing .container .video_wrapper .tutor_video .video_box video {
+        width: 100%;
+        display: block;
+        pointer-events: none; }
+    .pricing .container .video_wrapper .tutor_video img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0.95);
+      cursor: pointer;
+      opacity: 0.7;
+      transition: 0.4s ease-in-out; }
+      .pricing .container .video_wrapper .tutor_video img:hover {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1; }
+      .pricing .container .video_wrapper .tutor_video img.hide_ply_btn {
+        display: none; }
+
+.my_classes .container .wrapper {
+  width: 60%; }
+  .my_classes .container .wrapper .year_mounth {
+    margin-bottom: 30px; }
+    .my_classes .container .wrapper .year_mounth p #next {
+      margin-left: 15px; }
+    .my_classes .container .wrapper .year_mounth p #prev {
+      margin-right: 15px; }
+    .my_classes .container .wrapper .year_mounth p .year,
+    .my_classes .container .wrapper .year_mounth p .mounth {
+      margin-right: 5px;
+      margin-left: 5px; }
+  .my_classes .container .wrapper .calendar_table table {
+    border-collapse: collapse;
+    margin-bottom: 30px;
+    width: 100%; }
+    .my_classes .container .wrapper .calendar_table table tr {
+      background-color: #eeeeee; }
+      .my_classes .container .wrapper .calendar_table table tr td {
+        padding: 10px 15px;
+        border: none; }
+      .my_classes .container .wrapper .calendar_table table tr .student {
+        font-weight: 500; }
+      .my_classes .container .wrapper .calendar_table table tr .time {
+        color: rgba(65, 78, 82, 0.7); }
+      .my_classes .container .wrapper .calendar_table table tr:nth-child(odd) {
+        background-color: #fff; }
+  .my_classes .container .wrapper > p {
+    margin-bottom: 30px; }
+
 .featuring .container .wrapper button {
   margin: 50px 0;
   color: #b497cf; }
@@ -1516,6 +1615,46 @@ TUTOR PROFILE PAGE
     .expert .container .wrapper textarea::placeholder {
       font-family: "Roboto", sans-serif;
       color: rgba(0, 0, 0, 0.5); }
+
+.payment_method .container .wrapper {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: row; }
+  .payment_method .container .wrapper p:first-child {
+    margin-right: 40px;
+    margin-bottom: 20px; }
+  .payment_method .container .wrapper .paymant-inputs {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 60%; }
+    .payment_method .container .wrapper .paymant-inputs input {
+      width: 48%;
+      min-width: 200px;
+      margin-bottom: 20px;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid rgba(90, 109, 115, 0.5); }
+      .payment_method .container .wrapper .paymant-inputs input::placeholder {
+        color: rgba(0, 0, 0, 0.5); }
+    .payment_method .container .wrapper .paymant-inputs button {
+      width: 48%;
+      min-width: 200px; }
+  .payment_method .container .wrapper .preffered_paymet {
+    margin-top: 20px;
+    width: 100%; }
+    .payment_method .container .wrapper .preffered_paymet span {
+      cursor: pointer;
+      margin: 0 10px; }
+      .payment_method .container .wrapper .preffered_paymet span:first-child {
+        margin-left: 20px; }
+      .payment_method .container .wrapper .preffered_paymet span.preffered_payment_active {
+        color: #b497cf; }
 
 .about_me .container .wrapper {
   width: 70%;
@@ -1821,7 +1960,12 @@ TUTOR PROFILE PAGE
       .how .container .row .description {
         width: 40%;
         margin: 0;
-        padding: 0 20px; } }
+        padding: 0 20px; }
+
+  .my_classes .container .wrapper {
+    width: 100%; }
+    .my_classes .container .wrapper .calendar_table table tr td {
+      padding: 10px 7px; } }
 @media (max-width: 1050px) {
   .featured-banner {
     background-color: #b497cf;
@@ -2066,66 +2210,64 @@ TUTOR PROFILE PAGE
         flex-wrap: nowrap;
         flex-direction: row; }
 
-  .tutor_profile_header {
-    height: 50vh; }
-    .tutor_profile_header .container .tutor-profile-view .tutor-profile-card {
-      display: flex;
-      align-items: stretch;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      flex-direction: row; }
-      .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-img {
-        width: 25%; }
-      .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content {
-        width: 75%;
-        padding: 30px 10px 20px 20px; }
-        .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .my_profile {
-          font-size: 0.9rem; }
-        .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .tutor-card-headline {
-          width: 35%; }
-          .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .tutor-card-headline h3 {
-            font-size: 1.9rem; }
-        .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .tutor-card-description {
-          position: relative;
-          width: 65%;
+  .tutor_profile_header .container .tutor-profile-view .tutor-profile-card {
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row; }
+    .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-img {
+      width: 25%; }
+    .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content {
+      width: 75%;
+      padding: 30px 10px 20px 20px; }
+      .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .my_profile {
+        font-size: 0.9rem; }
+      .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .tutor-card-headline {
+        width: 35%; }
+        .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .tutor-card-headline h3 {
+          font-size: 1.9rem; }
+      .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .tutor-card-description {
+        position: relative;
+        width: 65%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        flex-direction: row;
+        padding-left: 20px; }
+        .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .tutor-card-description div {
           display: flex;
           align-items: center;
           justify-content: flex-start;
           flex-wrap: wrap;
           flex-direction: row;
-          padding-left: 20px; }
-          .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .tutor-card-description div {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            flex-wrap: wrap;
-            flex-direction: row;
-            margin-right: 30px;
-            margin-bottom: 20px; }
-            .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .tutor-card-description div p {
-              font-size: 0.9rem; }
-            .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .tutor-card-description div img {
-              margin-left: 15px;
-              width: 15px;
-              height: 15px; }
-    .tutor_profile_header .container .tutor-profile-view .tutor-profile-nav {
+          margin-right: 30px;
+          margin-bottom: 20px; }
+          .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .tutor-card-description div p {
+            font-size: 0.9rem; }
+          .tutor_profile_header .container .tutor-profile-view .tutor-profile-card .tutor-content .tutor-card-description div img {
+            margin-left: 15px;
+            width: 15px;
+            height: 15px; }
+  .tutor_profile_header .container .tutor-profile-view .tutor-profile-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding: 20px 50px; }
+    .tutor_profile_header .container .tutor-profile-view .tutor-profile-nav ul {
+      width: 100%;
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: space-between;
       flex-wrap: wrap;
-      flex-direction: row;
-      padding: 20px 50px; }
-      .tutor_profile_header .container .tutor-profile-view .tutor-profile-nav ul {
-        width: 100%;
-        display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        flex-direction: row; }
-        .tutor_profile_header .container .tutor-profile-view .tutor-profile-nav ul li {
-          width: 28.5%; }
-          .tutor_profile_header .container .tutor-profile-view .tutor-profile-nav ul li a {
-            color: #fff; } }
+      flex-direction: row; }
+      .tutor_profile_header .container .tutor-profile-view .tutor-profile-nav ul li {
+        width: 28.5%; }
+        .tutor_profile_header .container .tutor-profile-view .tutor-profile-nav ul li a {
+          color: #fff; } }
 @media (max-width: 860px) {
   	/******************** 
       NAV
@@ -2284,7 +2426,6 @@ TUTOR PROFILE PAGE
     background-image: url(/img/search_opt/search_opt_bg.png);
     background-position: center;
     background-size: cover;
-    height: 50vh;
     position: relative; }
     .tutor_profile_header .container {
       position: absolute;
@@ -2423,7 +2564,47 @@ TUTOR PROFILE PAGE
               opacity: 1; }
           .tutor_profile_header .container .tutor-profile-view .tutor-profile-nav ul.active-tutor-nav {
             max-height: 300px;
-            padding: 30px 20px 20px 20px; } }
+            padding: 30px 20px 20px 20px; }
+
+  .payment_method .container .wrapper {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    flex-direction: row; }
+    .payment_method .container .wrapper p:first-child {
+      margin-right: 40px;
+      margin-bottom: 20px; }
+    .payment_method .container .wrapper .paymant-inputs {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      flex-direction: row;
+      width: 100%; }
+      .payment_method .container .wrapper .paymant-inputs input {
+        width: 48%;
+        min-width: 200px;
+        margin-bottom: 20px;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid rgba(90, 109, 115, 0.5); }
+        .payment_method .container .wrapper .paymant-inputs input::placeholder {
+          color: rgba(0, 0, 0, 0.5); }
+      .payment_method .container .wrapper .paymant-inputs button {
+        width: 48%;
+        min-width: 200px; }
+    .payment_method .container .wrapper .preffered_paymet {
+      margin-top: 20px;
+      width: 100%; }
+      .payment_method .container .wrapper .preffered_paymet span {
+        cursor: pointer;
+        margin: 0 10px; }
+        .payment_method .container .wrapper .preffered_paymet span:first-child {
+          margin-left: 20px; }
+        .payment_method .container .wrapper .preffered_paymet span.preffered_payment_active {
+          color: #b497cf; } }
 @media (max-width: 768px) {
   .map-section .map-container .map-wrapper .map-box .map-marker {
     transform: scale(0.75); }
@@ -2795,7 +2976,23 @@ TUTOR PROFILE PAGE
       margin-top: 20px; }
     .find_your_tutor .container .input_search .custom-select {
       margin-top: 20px;
-      padding: 0; } }
+      padding: 0; }
+
+  .my_classes .container .wrapper {
+    width: 100%; }
+    .my_classes .container .wrapper .calendar_table table tr {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+      flex-direction: column;
+      border: 1px solid rgba(90, 109, 115, 0.3);
+      border-bottom: none; }
+      .my_classes .container .wrapper .calendar_table table tr td {
+        padding: 10px 7px;
+        font-size: 0.9rem; }
+      .my_classes .container .wrapper .calendar_table table tr:last-child {
+        border-bottom: 1px solid rgba(90, 109, 115, 0.3); } }
 @media (max-width: 460px) {
   .map-section .map-container .map-wrapper .map-box .map-marker {
     transform: scale(0.65); }
@@ -2836,6 +3033,14 @@ TUTOR PROFILE PAGE
         margin-bottom: 10px; }
 
   .tutor_profile_header .container {
-    bottom: -70%; } }
+    bottom: -70%; }
+
+  .pricing .container .wrapper .row {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
