--- a/css/style.css
+++ b/css/style.css
@@ -1519,7 +1519,9 @@ TUTOR PROFILE PAGE
   flex-wrap: wrap;
   flex-direction: row; }
   .pricing .container .video_wrapper .video_link {
-    width: 20%; }
+    width: 300px;
+    margin-right: 40px;
+    margin-bottom: 30px; }
   .pricing .container .video_wrapper .tutor_video {
     position: relative;
     width: 60%;
@@ -1602,7 +1604,8 @@ TUTOR PROFILE PAGE
   .expert .container .wrapper p {
     width: 25%;
     min-width: 300px;
-    margin-bottom: 30px; }
+    margin-bottom: 30px;
+    margin-right: 40px; }
   .apps .container .wrapper textarea,
   .expert .container .wrapper textarea {
     border-radius: 8px;
@@ -1618,33 +1621,41 @@ TUTOR PROFILE PAGE
 
 .payment_method .container .wrapper {
   width: 100%;
+  margin-bottom: 80px;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
   flex-wrap: wrap;
   flex-direction: row; }
-  .payment_method .container .wrapper p:first-child {
+  .payment_method .container .wrapper .label {
     margin-right: 40px;
-    margin-bottom: 20px; }
-  .payment_method .container .wrapper .paymant-inputs {
+    margin-bottom: 20px;
+    width: 300px;
+    line-height: 1.5; }
+  .payment_method .container .wrapper .inputs {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
     flex-direction: row;
     width: 60%; }
-    .payment_method .container .wrapper .paymant-inputs input {
+    .payment_method .container .wrapper .inputs input {
       width: 48%;
-      min-width: 200px;
+      min-width: 300px;
+      max-width: 400px;
       margin-bottom: 20px;
       padding: 10px;
       border-radius: 5px;
       border: 1px solid rgba(90, 109, 115, 0.5); }
-      .payment_method .container .wrapper .paymant-inputs input::placeholder {
+      .payment_method .container .wrapper .inputs input::placeholder {
         color: rgba(0, 0, 0, 0.5); }
-    .payment_method .container .wrapper .paymant-inputs button {
+      .payment_method .container .wrapper .inputs input:nth-child(1), .payment_method .container .wrapper .inputs input:nth-child(3), .payment_method .container .wrapper .inputs input:nth-child(5) {
+        margin-right: 20px; }
+    .payment_method .container .wrapper .inputs button {
       width: 48%;
-      min-width: 200px; }
+      min-width: 300px;
+      max-width: 400px;
+      margin-right: 30px; }
   .payment_method .container .wrapper .preffered_paymet {
     margin-top: 20px;
     width: 100%; }
@@ -1655,6 +1666,46 @@ TUTOR PROFILE PAGE
         margin-left: 20px; }
       .payment_method .container .wrapper .preffered_paymet span.preffered_payment_active {
         color: #b497cf; }
+  .payment_method .container .wrapper .spacer {
+    width: 100%; }
+  .payment_method .container .wrapper .request_review {
+    line-height: 1.5;
+    width: 300px;
+    margin-right: 40px;
+    margin-bottom: 30px; }
+  .payment_method .container .wrapper .inputs {
+    margin-bottom: 60px; }
+  .payment_method .container .wrapper .review_link {
+    margin-right: 18px; }
+  .payment_method .container .wrapper .share_infos {
+    width: 60%;
+    margin-bottom: 60px; }
+    .payment_method .container .wrapper .share_infos p {
+      margin-bottom: 15px; }
+    .payment_method .container .wrapper .share_infos img {
+      margin-right: 5px; }
+    .payment_method .container .wrapper .share_infos input {
+      width: 48%;
+      margin-top: 15px;
+      min-width: 250px;
+      margin-bottom: 20px;
+      max-width: 400px;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid rgba(90, 109, 115, 0.5); }
+      .payment_method .container .wrapper .share_infos input.mail-link {
+        margin-bottom: 60px; }
+      .payment_method .container .wrapper .share_infos input.email-inputs {
+        margin-top: 0px; }
+    .payment_method .container .wrapper .share_infos .review_link {
+      position: relative; }
+      .payment_method .container .wrapper .share_infos .review_link img {
+        position: absolute;
+        left: -40px;
+        top: 0; }
+.payment_method .container .wrapper_contact {
+  margin-bottom: 40px;
+  padding-bottom: 0px; }
 
 .about_me .container .wrapper {
   width: 70%;
@@ -1719,11 +1770,12 @@ TUTOR PROFILE PAGE
       display: inline-block;
       font-size: 1rem;
       width: 25%;
-      min-width: 100px; }
+      min-width: 100px;
+      margin-bottom: 0px !important; }
     .certificate .container .wrapper div input {
       font-size: 1rem;
       padding: 7px 10px;
-      border: 1px solid #5a6d73;
+      border: 1px solid rgba(90, 109, 115, 0.5);
       border-radius: 4px;
       width: 75%; }
       .certificate .container .wrapper div input:focus {
@@ -1915,7 +1967,24 @@ TUTOR PROFILE PAGE
   .certificate .container .wrapper {
     width: 90%; }
     .certificate .container .wrapper div label {
-      margin-bottom: 20px; } }
+      margin-bottom: 20px; }
+
+  .apps .container .wrapper p,
+  .expert .container .wrapper p {
+    width: 20%;
+    margin-right: 40px;
+    min-width: unset; }
+  .apps .container .wrapper textarea,
+  .expert .container .wrapper textarea {
+    max-width: 50%; }
+
+  .payment_method .container .wrapper .inputs {
+    width: 75%; }
+    .payment_method .container .wrapper .inputs input {
+      min-width: 180px; }
+  .payment_method .container .wrapper .label,
+  .payment_method .container .wrapper .request_review {
+    width: 20%; } }
 @media (max-width: 1200px) {
   .map-section .map-container .map-wrapper .map-box .map-marker {
     transform: scale(0.85); }
@@ -2267,7 +2336,30 @@ TUTOR PROFILE PAGE
       .tutor_profile_header .container .tutor-profile-view .tutor-profile-nav ul li {
         width: 28.5%; }
         .tutor_profile_header .container .tutor-profile-view .tutor-profile-nav ul li a {
-          color: #fff; } }
+          color: #fff; }
+
+  .apps .container .wrapper p,
+  .expert .container .wrapper p {
+    width: 30%;
+    margin-right: 40px;
+    min-width: unset; }
+  .apps .container .wrapper textarea,
+  .expert .container .wrapper textarea {
+    width: 70%; }
+
+  .payment_method .container .wrapper .inputs {
+    width: 100%; }
+    .payment_method .container .wrapper .inputs input {
+      min-width: 150px; }
+  .payment_method .container .wrapper .label,
+  .payment_method .container .wrapper .request_review {
+    width: 50%; }
+    .payment_method .container .wrapper .label p br,
+    .payment_method .container .wrapper .request_review p br {
+      display: none; }
+  .payment_method .container .wrapper .request_review {
+    width: 25%;
+    min-width: 180px; } }
 @media (max-width: 860px) {
   	/******************** 
       NAV
@@ -2574,8 +2666,7 @@ TUTOR PROFILE PAGE
     flex-wrap: wrap;
     flex-direction: row; }
     .payment_method .container .wrapper p:first-child {
-      margin-right: 40px;
-      margin-bottom: 20px; }
+      margin-right: 40px; }
     .payment_method .container .wrapper .paymant-inputs {
       display: flex;
       align-items: center;
@@ -2889,7 +2980,26 @@ TUTOR PROFILE PAGE
   .featuring .container .wrapper .renewal {
     margin-top: 30px; }
     .featuring .container .wrapper .renewal span {
-      font-weight: 600; } }
+      font-weight: 600; }
+
+  .payment_method .container .wrapper .inputs {
+    width: 100%; }
+    .payment_method .container .wrapper .inputs input {
+      width: 100%;
+      margin-right: 0px !important; }
+    .payment_method .container .wrapper .inputs button {
+      width: 100%;
+      margin-right: 0; }
+  .payment_method .container .wrapper .label,
+  .payment_method .container .wrapper .request_review {
+    width: 100%;
+    margin-left: 40px; }
+    .payment_method .container .wrapper .label br,
+    .payment_method .container .wrapper .request_review br {
+      display: none; }
+  .payment_method .container .wrapper .share_infos {
+    width: 80%;
+    margin-left: 40px; } }
 @media (max-width: 590px) {
   header {
     padding: 50px 10px;
