--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1519,7 +1519,9 @@ TUTOR PROFILE PAGE
 			@include flex(flex-start, flex-start, wrap, row);
 
 			.video_link {
-				width: 20%;
+				width: 300px;
+				margin-right: 40px;
+				margin-bottom: 30px;
 			}
 			.tutor_video {
 				position: relative;
@@ -1655,6 +1657,7 @@ TUTOR PROFILE PAGE
 				width: 25%;
 				min-width: 300px;
 				margin-bottom: 30px;
+				margin-right: 40px;
 			}
 			textarea {
 				border-radius: 8px;
@@ -1677,31 +1680,42 @@ TUTOR PROFILE PAGE
 	.container {
 		.wrapper {
 			width: 100%;
+			margin-bottom: 80px;
 			@include flex(flex-start, flex-start, wrap, row);
-			p {
-				&:first-child {
-					margin-right: 40px;
-					margin-bottom: 20px;
-				}
+			.label {
+				margin-right: 40px;
+				margin-bottom: 20px;
+				width: 300px;
+				// border: 1px solid black;
+				line-height: 1.5;
 			}
-			.paymant-inputs {
-				@include flex(center, space-between, wrap, row);
+			.inputs {
+				@include flex(center, flex-start, wrap, row);
 				width: 60%;
 
 				input {
 					width: 48%;
-					min-width: 200px;
+					min-width: 300px;
+					max-width: 400px;
 					margin-bottom: 20px;
 					padding: 10px;
 					border-radius: 5px;
 					border: 1px solid rgba($line_color, 0.5);
+
 					&::placeholder {
 						color: rgba($black, 0.5);
+					}
+					&:nth-child(1),
+					&:nth-child(3),
+					&:nth-child(5) {
+						margin-right: 20px;
 					}
 				}
 				button {
 					width: 48%;
-					min-width: 200px;
+					min-width: 300px;
+					max-width: 400px;
+					margin-right: 30px;
 				}
 			}
 			.preffered_paymet {
@@ -1718,6 +1732,62 @@ TUTOR PROFILE PAGE
 					}
 				}
 			}
+			.spacer {
+				width: 100%;
+			}
+			.request_review {
+				line-height: 1.5;
+				width: 300px;
+				margin-right: 40px;
+				margin-bottom: 30px;
+			}
+			.inputs {
+				margin-bottom: 60px;
+			}
+			.review_link {
+				margin-right: 18px;
+			}
+			.share_infos {
+				width: 60%;
+				margin-bottom: 60px;
+				p {
+					margin-bottom: 15px;
+				}
+
+				img {
+					margin-right: 5px;
+				}
+
+				input {
+					width: 48%;
+					margin-top: 15px;
+					min-width: 250px;
+					margin-bottom: 20px;
+					max-width: 400px;
+					padding: 10px;
+					border-radius: 5px;
+					border: 1px solid rgba($line_color, 0.5);
+					&.mail-link {
+						margin-bottom: 60px;
+					}
+					&.email-inputs {
+						margin-top: 0px;
+					}
+				}
+				.review_link {
+					position: relative;
+
+					img {
+						position: absolute;
+						left: -40px;
+						top: 0;
+					}
+				}
+			}
+		}
+		.wrapper_contact {
+			margin-bottom: 40px;
+			padding-bottom: 0px;
 		}
 	}
 }
@@ -1791,11 +1861,12 @@ TUTOR PROFILE PAGE
 					// margin-right: 40px;
 					width: 25%;
 					min-width: 100px;
+					margin-bottom: 0px !important;
 				}
 				input {
 					font-size: 1rem;
 					padding: 7px 10px;
-					border: 1px solid $line_color;
+					border: 1px solid rgba($line_color, 0.5);
 					border-radius: 4px;
 					width: 75%;
 
