--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -370,6 +370,78 @@
 			}
 		}
 	}
+
+	// MY CALENDAR
+	.my_calendar {
+		.container {
+			.wrapper {
+				@include flex(stretch, space-between, wrap, column);
+				.calendar_panel {
+					width: 100%;
+					border-right: none;
+					border-bottom: 1px solid rgba($line_color, 0.5);
+					@include flex(stretch, space-between, wrap, row);
+					> div {
+						width: 25%;
+						border-bottom: none;
+						border-right: 1px solid rgba($line_color, 0.5);
+						padding: 15px;
+						p {
+							font-size: 0.9rem;
+						}
+					}
+					.holidays {
+						order: 5;
+						width: 100%;
+						border-bottom: none;
+						border-top: 1px solid rgba($line_color, 0.5);
+						border-right: none;
+						.available {
+							@include flex(center, space-evenly, wrap, row);
+							width: 80%;
+							margin: 10px auto;
+							min-width: 300px;
+							p {
+								&:first-child {
+									width: 100%;
+									text-align: center;
+									margin-bottom: 20px;
+								}
+								span {
+									display: none;
+								}
+							}
+							.from {
+								display: inline-block;
+							}
+							input {
+								width: 40%;
+							}
+							a {
+								width: 100%;
+								text-align: center;
+							}
+						}
+					}
+					.legend {
+						border-right: none;
+					}
+				}
+				.calendar_view {
+					width: 100%;
+					.calendar_slider {
+						padding: 8px 0;
+					}
+					.date {
+						min-height: 80px;
+						&:nth-child(29) {
+							border-bottom-left-radius: 10px;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 @media (max-width: $breakPoint_4) {
@@ -669,6 +741,7 @@
 
 	.tutor_profile_header {
 		// height: 50vh;
+		margin-bottom: 400px;
 		.container {
 			.tutor-profile-view {
 				.tutor-profile-card {
@@ -953,7 +1026,7 @@
 
 	.tutor_profile_header {
 		padding-bottom: 50px;
-		margin-bottom: 300px;
+		margin-bottom: 400px;
 		background-image: url(/img/search_opt/search_opt_bg.png);
 		background-position: center;
 		background-size: cover;
@@ -1111,6 +1184,33 @@
 							max-height: 300px;
 							padding: 30px 20px 20px 20px;
 							// border: 1px solid black;
+						}
+					}
+				}
+			}
+		}
+	}
+
+	.my_messages {
+		.container {
+			.wrapper {
+				.mail_panel {
+					min-width: unset;
+					max-width: unset;
+					.mail_nav {
+						ul {
+							li {
+								a {
+									margin-right: 0;
+								}
+							}
+						}
+					}
+					.mail_slider {
+						.mail_count {
+							font-size: 0.85rem;
+							border: 1px solid black;
+							width: 100%;
 						}
 					}
 				}
@@ -1556,6 +1656,123 @@
 			}
 		}
 	}
+	.my_messages {
+		.container {
+			.wrapper {
+				padding: 0;
+				.mail_panel {
+					min-width: unset;
+					max-width: unset;
+					padding-right: 5px;
+					.mail_nav {
+						ul {
+							li {
+								a {
+									margin-right: 0;
+									font-size: 0.9rem;
+									width: unset;
+									text-align: center;
+								}
+							}
+						}
+					}
+					.mail_slider {
+						.mail_count {
+							font-size: 0.85rem;
+							border: 1px solid black;
+							width: 100%;
+						}
+					}
+				}
+				.mail_box {
+					.single_mail {
+						@include flex(center, center, wrap, column);
+						.sender {
+							width: 100%;
+							justify-content: flex-start;
+						}
+						.mail_time_options {
+							width: 100%;
+							justify-content: flex-start;
+						}
+					}
+				}
+			}
+		}
+	}
+
+	.my_calendar {
+		.container {
+			.wrapper {
+				padding: 0;
+				.calendar_panel {
+					> div {
+						width: 50%;
+						border-bottom: none;
+						border-right: 1px solid rgba($line_color, 0.5);
+						border-bottom: 1px solid rgba($line_color, 0.5);
+						padding: 15px;
+						p {
+							font-size: 0.9rem;
+						}
+
+						&:nth-child(2) {
+							border-right: none;
+						}
+						&:nth-child(3),
+						&:nth-child(4) {
+							border-bottom: none;
+						}
+					}
+					.holidays {
+						.available {
+							@include flex(center, space-evenly, wrap, column);
+							input {
+								width: 80%;
+								min-width: 180px;
+							}
+						}
+					}
+				}
+				.calendar_view {
+					.days {
+						p {
+							span {
+								display: none;
+							}
+						}
+					}
+					.dates {
+						.date {
+							padding: 5px;
+							.current_date {
+								font-size: 0.9rem;
+							}
+							.date_agenda {
+								padding: 25px 5px 5px 5px !important;
+								ul {
+									li {
+										font-size: 0.8rem;
+									}
+								}
+
+								&::after {
+									display: block;
+									content: "";
+									width: 100%;
+									height: 100%;
+									// border: 1px solid red;
+									position: absolute;
+									top: 0;
+									left: 0;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 @media (max-width: $breakPoint_6_b) {
@@ -1659,6 +1876,17 @@
 					padding: 0;
 				}
 			}
+		}
+	}
+	.tutor_profile_header {
+		.container {
+			width: 95%;
+		}
+	}
+
+	.tutor_section {
+		.container {
+			width: 95%;
 		}
 	}
 	// MY CALSSES
