--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -10,6 +10,7 @@
 	color: $color;
 	background: $btn-primary;
 	font-size: $fsize;
+	font-family: $font_family;
 	border-radius: 10px;
 	border: none;
 }
